GUIをTranslationManagerに対応 ショップのコードを効率化